5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4171/executions/1595_1015.log
== TEST (2019-03-21 16:54:54) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.


a = int(input("valor a: "))
b = int(input("valor b: "))
c = int(input("valor c: "))

print(min(a,b,c))

-- OUTPUT:
-2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 16:55:29) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.


a = int(input("valor a: "))
b = int(input("valor b: "))
c = int(input("valor c: "))

print(min(a,b,c))
print(max(a,b,c))


-- EXECUTION TIME:
0.14806
-- TEST CASE 1:
---- input:
10 -2 0
---- correct output:
-2 0 10
---- user output:
-2
10
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 16:55:30) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.


a = int(input("valor a: "))
b = int(input("valor b: "))
c = int(input("valor c: "))

print(min(a,b,c))
print(max(a,b,c))


-- OUTPUT:
-2
10
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 16:56:29) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.


a = int(input("valor a: "))
b = int(input("valor b: "))
c = int(input("valor c: "))

print(max(a,b,c))
print((max(a,b,c)/min(a,b,c)))
print(min(a,b,c))


-- OUTPUT:
10
-5.0
-2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 16:56:47) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.


a = int(input("valor a: "))
b = int(input("valor b: "))
c = int(input("valor c: "))

print(max(a,b,c))
print(int(((max(a,b,c)/min(a,b,c)))
print(min(a,b,c))


-- ERROR:
File "XXXX", line 12
    print(min(a,b,c))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 16:56:49) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.


a = int(input("valor a: "))
b = int(input("valor b: "))
c = int(input("valor c: "))

print(max(a,b,c))
print(int(((max(a,b,c)/min(a,b,c)))
print(min(a,b,c))


-- EXECUTION TIME:
0.160155
-- ERROR:
  File "/home/codebench/codes/1595/1015/main.py", line 12
    print(min(a,b,c))
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 16:56:51) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.


a = int(input("valor a: "))
b = int(input("valor b: "))
c = int(input("valor c: "))

print(max(a,b,c))
print(int(((max(a,b,c)/min(a,b,c)))
print(min(a,b,c))


-- ERROR:
File "XXXX", line 12
    print(min(a,b,c))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 16:56:59) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.


a = int(input("valor a: "))
b = int(input("valor b: "))
c = int(input("valor c: "))

print(max(a,b,c))
print((max(a,b,c)/min(a,b,c)))
print(min(a,b,c))


-- EXECUTION TIME:
0.202567
-- TEST CASE 1:
---- input:
10 -2 0
---- correct output:
-2 0 10
---- user output:
10
-5.0
-2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 16:56:59) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.


a = int(input("valor a: "))
b = int(input("valor b: "))
c = int(input("valor c: "))

print(max(a,b,c))
print((max(a,b,c)/min(a,b,c)))
print(min(a,b,c))


-- OUTPUT:
10
-5.0
-2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 16:58:36) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.


a = int(input("valor a: "))
b = int(input("valor b: "))
c = int(input("valor c: "))

print(min(a,b,c))
print(a+b+c - (min(a,b,c) - (max(a,b,c)))
print(max(a,b,c))


-- EXECUTION TIME:
0.142975
-- ERROR:
  File "/home/codebench/codes/1595/1015/main.py", line 12
    print(max(a,b,c))
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 16:58:36) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.


a = int(input("valor a: "))
b = int(input("valor b: "))
c = int(input("valor c: "))

print(min(a,b,c))
print(a+b+c - (min(a,b,c) - (max(a,b,c)))
print(max(a,b,c))


-- ERROR:
File "XXXX", line 12
    print(max(a,b,c))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 16:58:57) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.


a = int(input("valor a: "))
b = int(input("valor b: "))
c = int(input("valor c: "))

print(min(a,b,c))
print(a+b+c - (min(a,b,c) - (max(a,b,c)))
int(max(a,b,c))
print(max(a,b,c))


-- EXECUTION TIME:
0.145701
-- ERROR:
  File "/home/codebench/codes/1595/1015/main.py", line 12
    int(max(a,b,c))
      ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 16:58:57) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.


a = int(input("valor a: "))
b = int(input("valor b: "))
c = int(input("valor c: "))

print(min(a,b,c))
print(a+b+c - (min(a,b,c) - (max(a,b,c)))
int(max(a,b,c))
print(max(a,b,c))


-- ERROR:
File "XXXX", line 12
    int(max(a,b,c))
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 16:59:26) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.


a = int(input("valor a: "))
b = int(input("valor b: "))
c = int(input("valor c: "))

y = a+b+c - (min(a,b,c) - (max(a,b,c)))

print(min(a,b,c))
print(y)
print(max(a,b,c))


-- OUTPUT:
-2
20
10
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 16:59:54) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.


a = int(input("valor a: "))
b = int(input("valor b: "))
c = int(input("valor c: "))

y = a+b+c - (min(a,b,c) - (max(a,b,c)

print(min(a,b,c))
print(y)
print(max(a,b,c))


-- ERROR:
File "XXXX", line 12
    print(min(a,b,c))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 17:00:16) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.


a = int(input("valor a: "))
b = int(input("valor b: "))
c = int(input("valor c: "))

y = a+b+c - (min(a,b,c) - (max(a,b,c)

print(min(a,b,c))
print(y)
print(max(a,b,c))


-- ERROR:
File "XXXX", line 12
    print(min(a,b,c))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 17:00:17) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.


a = int(input("valor a: "))
b = int(input("valor b: "))
c = int(input("valor c: "))

y = a+b+c - (min(a,b,c) - (max(a,b,c)

print(min(a,b,c))
print(y)
print(max(a,b,c))


-- ERROR:
File "XXXX", line 12
    print(min(a,b,c))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 17:00:19) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.


a = int(input("valor a: "))
b = int(input("valor b: "))
c = int(input("valor c: "))

y = a+b+c - (min(a,b,c)   - (max(a,b,c)

print(min(a,b,c))
print(y)
print(max(a,b,c))


-- EXECUTION TIME:
0.209107
-- ERROR:
  File "/home/codebench/codes/1595/1015/main.py", line 12
    print(min(a,b,c))
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 17:01:53) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.


a = int(input("valor a: "))
b = int(input("valor b: "))
c = int(input("valor c: "))

y = a+b+c - (min(a,b,c) - (max(a,b,c)

print(min(a,b,c))
print(y)
print(max(a,b,c))
-- ERROR:
File "XXXX", line 12
    print(min(a,b,c))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 17:02:50) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

a = int(input("valor a: "))
b = int(input("valor b: "))
c = int(input("valor c: "))

y = a + b + c
z = (min(a,b,c) - (max(a,b,c)
print(y - z)
						 
print(min(a,b,c))
print(y)
print(max(a,b,c))
-- ERROR:
File "XXXX", line 11
    print(y - z)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 17:03:00) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

a = int(input("valor a: "))
b = int(input("valor b: "))
c = int(input("valor c: "))

y = a + b + c
z = (min(a,b,c) - (max(a,b,c)
print(y)
						 
print(min(a,b,c))
print(y)
print(max(a,b,c))
-- ERROR:
File "XXXX", line 11
    print(y)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 17:05:41) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

a = int(input("valor a: "))
b = int(input("valor b: "))
c = int(input("valor c: "))

y = a + b + c


print(min(a,b,c))

print(max(a,b,c))
-- OUTPUT:
-2
10
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 17:05:59) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

a = int(input("valor a: "))
b = int(input("valor b: "))
c = int(input("valor c: "))

y = a + b + c


print(min(a,b,c))
print(min - max)
print(max(a,b,c))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 13, in <module>
    print(min - max)
TypeError: unsupported operand type(s) for -: 'builtin_function_or_method' and 'builtin_function_or_method'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 17:06:40) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

a = int(input("valor a: "))
b = int(input("valor b: "))
c = int(input("valor c: "))

y = a + b + c


print(min(a,b,c))
print(min(a,b,c) - max(a,b,c))
print(max(a,b,c))
-- EXECUTION TIME:
0.185638
-- TEST CASE 1:
---- input:
10 -2 0
---- correct output:
-2 0 10
---- user output:
-2
-12
10
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 17:06:41) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

a = int(input("valor a: "))
b = int(input("valor b: "))
c = int(input("valor c: "))

y = a + b + c


print(min(a,b,c))
print(min(a,b,c) - max(a,b,c))
print(max(a,b,c))
-- OUTPUT:
-2
-12
10
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 17:07:40) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

a = int(input("valor a: "))
b = int(input("valor b: "))
c = int(input("valor c: "))

y = a + b + c


print(min(a,b,c))
print(max(a,b,c) - min(a,b,c))
print(max(a,b,c))
-- EXECUTION TIME:
0.120756
-- TEST CASE 1:
---- input:
10 -2 0
---- correct output:
-2 0 10
---- user output:
-2
12
10
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 17:07:41) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

a = int(input("valor a: "))
b = int(input("valor b: "))
c = int(input("valor c: "))

y = a + b + c


print(min(a,b,c))
print(max(a,b,c) - min(a,b,c))
print(max(a,b,c))
-- OUTPUT:
-2
12
10
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 17:07:55) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

a = int(input("valor a: "))
b = int(input("valor b: "))
c = int(input("valor c: "))

y = a + b + c


print(min(a,b,c))
print(max(a,b,c) - min(a,b,c))
print(max(a,b,c))
-- OUTPUT:
-2
12
10
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 17:08:00) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

a = int(input("valor a: "))
b = int(input("valor b: "))
c = int(input("valor c: "))

y = a + b + c


print(min(a,b,c))
print(max(a,b,c) - min(a,b,c))
print(max(a,b,c))
-- EXECUTION TIME:
0.16307
-- TEST CASE 1:
---- input:
10 -2 0
---- correct output:
-2 0 10
---- user output:
-2
12
10
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 17:08:08) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

a = int(input("valor a: "))
b = int(input("valor b: "))
c = int(input("valor c: "))

print(min(a,b,c))
print(max(a,b,c) - min(a,b,c))
print(max(a,b,c))
-- EXECUTION TIME:
0.143808
-- TEST CASE 1:
---- input:
10 -2 0
---- correct output:
-2 0 10
---- user output:
-2
12
10
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 17:08:28) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

a = int(input("valor a: "))
b = int(input("valor b: "))
c = int(input("valor c: "))

print(max(a,b,c))
print(max(a,b,c) - min(a,b,c))
print(min(a,b,c))
-- EXECUTION TIME:
0.138019
-- TEST CASE 1:
---- input:
10 -2 0
---- correct output:
-2 0 10
---- user output:
10
12
-2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 17:08:29) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

a = int(input("valor a: "))
b = int(input("valor b: "))
c = int(input("valor c: "))

print(max(a,b,c))
print(max(a,b,c) - min(a,b,c))
print(min(a,b,c))
-- OUTPUT:
10
12
-2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 17:08:48) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

a = int(input("valor a: "))
b = int(input("valor b: "))
c = int(input("valor c: "))

print(min(a,b,c))
print(max(a,b,c) - min(a,b,c))
print(max(a,b,c))
-- OUTPUT:
-2
12
10
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 17:08:48) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

a = int(input("valor a: "))
b = int(input("valor b: "))
c = int(input("valor c: "))

print(min(a,b,c))
print(max(a,b,c) - min(a,b,c))
print(max(a,b,c))
-- EXECUTION TIME:
0.122713
-- TEST CASE 1:
---- input:
10 -2 0
---- correct output:
-2 0 10
---- user output:
-2
12
10
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 17:08:49) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

a = int(input("valor a: "))
b = int(input("valor b: "))
c = int(input("valor c: "))

print(min(a,b,c))
print(max(a,b,c) - min(a,b,c))
print(max(a,b,c))
-- EXECUTION TIME:
0.137162
-- TEST CASE 1:
---- input:
10 -2 0
---- correct output:
-2 0 10
---- user output:
-2
12
10
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 17:08:49) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

a = int(input("valor a: "))
b = int(input("valor b: "))
c = int(input("valor c: "))

print(min(a,b,c))
print(max(a,b,c) - min(a,b,c))
print(max(a,b,c))
-- EXECUTION TIME:
0.101554
-- TEST CASE 1:
---- input:
10 -2 0
---- correct output:
-2 0 10
---- user output:
-2
12
10
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 17:08:50) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

a = int(input("valor a: "))
b = int(input("valor b: "))
c = int(input("valor c: "))

print(min(a,b,c))
print(max(a,b,c) - min(a,b,c))
print(max(a,b,c))
-- EXECUTION TIME:
0.181898
-- TEST CASE 1:
---- input:
10 -2 0
---- correct output:
-2 0 10
---- user output:
-2
12
10
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 17:08:50) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

a = int(input("valor a: "))
b = int(input("valor b: "))
c = int(input("valor c: "))

print(min(a,b,c))
print(max(a,b,c) - min(a,b,c))
print(max(a,b,c))
-- EXECUTION TIME:
0.132051
-- TEST CASE 1:
---- input:
10 -2 0
---- correct output:
-2 0 10
---- user output:
-2
12
10
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 17:08:50) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

a = int(input("valor a: "))
b = int(input("valor b: "))
c = int(input("valor c: "))

print(min(a,b,c))
print(max(a,b,c) - min(a,b,c))
print(max(a,b,c))
-- EXECUTION TIME:
0.160793
-- TEST CASE 1:
---- input:
10 -2 0
---- correct output:
-2 0 10
---- user output:
-2
12
10
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 17:08:50) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

a = int(input("valor a: "))
b = int(input("valor b: "))
c = int(input("valor c: "))

print(min(a,b,c))
print(max(a,b,c) - min(a,b,c))
print(max(a,b,c))
-- EXECUTION TIME:
0.0941381
-- TEST CASE 1:
---- input:
10 -2 0
---- correct output:
-2 0 10
---- user output:
-2
12
10
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 17:08:51) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

a = int(input("valor a: "))
b = int(input("valor b: "))
c = int(input("valor c: "))

print(min(a,b,c))
print(max(a,b,c) - min(a,b,c))
print(max(a,b,c))
-- EXECUTION TIME:
0.211998
-- TEST CASE 1:
---- input:
10 -2 0
---- correct output:
-2 0 10
---- user output:
-2
12
10
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 17:08:51) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

a = int(input("valor a: "))
b = int(input("valor b: "))
c = int(input("valor c: "))

print(min(a,b,c))
print(max(a,b,c) - min(a,b,c))
print(max(a,b,c))
-- EXECUTION TIME:
0.137605
-- TEST CASE 1:
---- input:
10 -2 0
---- correct output:
-2 0 10
---- user output:
-2
12
10
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 17:08:53) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

a = int(input("valor a: "))
b = int(input("valor b: "))
c = int(input("valor c: "))

print(min(a,b,c))
print(max(a,b,c) - min(a,b,c))
print(max(a,b,c))
-- EXECUTION TIME:
0.267027
-- TEST CASE 1:
---- input:
10 -2 0
---- correct output:
-2 0 10
---- user output:
-2
12
10
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 17:08:53) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

a = int(input("valor a: "))
b = int(input("valor b: "))
c = int(input("valor c: "))

print(min(a,b,c))
print(max(a,b,c) - min(a,b,c))
print(max(a,b,c))
-- EXECUTION TIME:
0.170435
-- TEST CASE 1:
---- input:
10 -2 0
---- correct output:
-2 0 10
---- user output:
-2
12
10
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 17:08:53) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

a = int(input("valor a: "))
b = int(input("valor b: "))
c = int(input("valor c: "))

print(min(a,b,c))
print(max(a,b,c) - min(a,b,c))
print(max(a,b,c))
-- EXECUTION TIME:
0.161704
-- TEST CASE 1:
---- input:
10 -2 0
---- correct output:
-2 0 10
---- user output:
-2
12
10
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 17:08:54) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

a = int(input("valor a: "))
b = int(input("valor b: "))
c = int(input("valor c: "))

print(min(a,b,c))
print(max(a,b,c) - min(a,b,c))
print(max(a,b,c))
-- EXECUTION TIME:
0.197905
-- TEST CASE 1:
---- input:
10 -2 0
---- correct output:
-2 0 10
---- user output:
-2
12
10
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 17:08:54) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

a = int(input("valor a: "))
b = int(input("valor b: "))
c = int(input("valor c: "))

print(min(a,b,c))
print(max(a,b,c) - min(a,b,c))
print(max(a,b,c))
-- EXECUTION TIME:
0.120046
-- TEST CASE 1:
---- input:
10 -2 0
---- correct output:
-2 0 10
---- user output:
-2
12
10
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 17:08:55) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

a = int(input("valor a: "))
b = int(input("valor b: "))
c = int(input("valor c: "))

print(min(a,b,c))
print(max(a,b,c) - min(a,b,c))
print(max(a,b,c))
-- EXECUTION TIME:
0.112648
-- TEST CASE 1:
---- input:
10 -2 0
---- correct output:
-2 0 10
---- user output:
-2
12
10
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 17:08:55) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

a = int(input("valor a: "))
b = int(input("valor b: "))
c = int(input("valor c: "))

print(min(a,b,c))
print(max(a,b,c) - min(a,b,c))
print(max(a,b,c))
-- EXECUTION TIME:
0.138621
-- TEST CASE 1:
---- input:
10 -2 0
---- correct output:
-2 0 10
---- user output:
-2
12
10
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 17:09:47) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

a = int(input("valor a: "))
b = int(input("valor b: "))
c = int(input("valor c: "))

print(min(a,b,c))
print(max(a,b,c) - min(a,b,c))
print(max(a,b,c))
-- OUTPUT:
-2
12
10
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 17:11:57) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

a = int(input("valor a: "))
b = int(input("valor b: "))
c = int(input("valor c: "))

print(min(a,b,c))
print(a + b + c - max(a,b,c) - min(a,b,c))
print(max(a,b,c))
-- EXECUTION TIME:
0.200512
-- TEST CASE 1:
---- input:
10 -2 0
---- correct output:
-2 0 10
---- user output:
-2
0
10
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
